5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1590_1016.log
== TEST (2019-03-25 13:50:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input("qual a medida de a? "))
b = float(input("qual a medida de b?"))
c = float(input("qual a medida de c?"))
s = (a+b+c)/2
from math import
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))
-- ERROR:
File "XXXX", line 8
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:50:22) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input("qual a medida de a? "))
b = float(input("qual a medida de b?"))
c = float(input("qual a medida de c?"))
s = (a+b+c)/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 13:50:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input("qual a medida de a? "))
b = float(input("qual a medida de b?"))
c = float(input("qual a medida de c?"))
s = (a+b+c)/2
from math import*
A=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))
-- EXECUTION TIME:
0.204444
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:55:33) 
-- CODE:
a = float(input("qual o lado a?"))
b = float(input("qual o lado b?"))
c = float(input("qual o lado c?"))
s = (a+b+c)/2
A = sqrt(s(s-a)(s-b)(s-c))
print(round(A, 5)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:55:47) 
-- CODE:
a = float(input("qual o lado a?"))
b = float(input("qual o lado b?"))
c = float(input("qual o lado c?"))
s = (a+b+c)/2
A = sqrt(s(s-a)(s-b)(s-c))
print(round(A, 5)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:55:55) 
-- CODE:
a = float(input("qual o lado a?"))
b = float(input("qual o lado b?"))
c = float(input("qual o lado c?"))
s = (a+b+c)/2
A = sqrt(s(s-a)(s-b)(s-c))
print(round(A, 5)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:55:58) 
-- CODE:
a = float(input("qual o lado a?"))
b = float(input("qual o lado b?"))
c = float(input("qual o lado c?"))
s = (a+b+c)/2
A = sqrt(s(s-a)(s-b)(s-c))
print(round(A, 5)
-- ERROR:
File "XXXX", line 7
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:56:24) 
-- CODE:
a = float(input("qual o lado a?"))
b = float(input("qual o lado b?"))
c = float(input("qual o lado c?"))
s = (a+b+c)/2
A = sqrt(s(s-a)(s-b)(s-c))
print(A)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    A = sqrt(s(s-a)(s-b)(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:57:31) 
-- CODE:
a = float(input("qual o lado a?"))
b = float(input("qual o lado b?"))
c = float(input("qual o lado c?"))
s = (a+b+c)/2
from math import*
A = sqrt(s(s-a)(s-b)(s-c))
print(round(A, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A = sqrt(s(s-a)(s-b)(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:57:54) 
-- CODE:
a = float(input("qual o lado a?"))
b = float(input("qual o lado b?"))
c = float(input("qual o lado c?"))
s = (a+b+c)/2
from math import*
A = float(sqrt(s(s-a)(s-b)(s-c)))
print(round(A, 5))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    A = float(sqrt(s(s-a)(s-b)(s-c)))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:58:42) 
-- CODE:
a = float(input("qual o lado a?"))
b = float(input("qual o lado b?"))
c = float(input("qual o lado c?"))
s = (a+b+c)/2
from math import*
A = (sqrt(s*(s-a)*(s-b)*(s-c)))
print(round(A, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:58:50) 
-- CODE:
a = float(input("qual o lado a?"))
b = float(input("qual o lado b?"))
c = float(input("qual o lado c?"))
s = (a+b+c)/2
from math import*
A = (sqrt(s*(s-a)*(s-b)*(s-c)))
print(round(A, 5))
-- EXECUTION TIME:
0.138241
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
